still getting 401 but the token gets to the c# side

--- a/SignalRChat/wwwroot/chat.html
+++ b/SignalRChat/wwwroot/chat.html
@@ -13,5 +13,7 @@
         <ul id="message-list"></ul>
     </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
-    <script src="js/chat.js"></script>
+    <script type="module" src="js/login.js"></script>
+    <script type="module" src="js/chat.js"></script>
+    <script type="module" src="js/main.js"></script>
 </html>
